package es.ull.patrones.prototype.monsters;

public interface MonsterPrototype {
    public MonsterPrototype clone();
}
