@startuml

title __PROTOTYPE's Class Diagram__\n

  namespace es.ull.patrones {
    class Main {
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.app {
      class es.ull.patrones.app.App {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.InformationFrame {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.MainFrame {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.manager {
      class es.ull.patrones.prototype.manager.ManagerMonster {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.BlueMonster {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.GreenMonster {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      abstract class es.ull.patrones.prototype.monsters.Monster {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      interface es.ull.patrones.prototype.monsters.MonsterPrototype {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.OrangeMonster {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.PurpleMonster {
      }
    }
  }
  

  es.ull.patrones.gui.InformationFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.MainFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.MainFrame o-- es.ull.patrones.prototype.manager.ManagerMonster : man
  es.ull.patrones.prototype.monsters.BlueMonster -up-|> es.ull.patrones.prototype.monsters.Monster
  es.ull.patrones.prototype.monsters.GreenMonster -up-|> es.ull.patrones.prototype.monsters.Monster
  es.ull.patrones.prototype.monsters.Monster .up.|> es.ull.patrones.prototype.monsters.MonsterPrototype
  es.ull.patrones.prototype.monsters.OrangeMonster -up-|> es.ull.patrones.prototype.monsters.Monster
  es.ull.patrones.prototype.monsters.PurpleMonster -up-|> es.ull.patrones.prototype.monsters.Monster


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
